manager/config/control-plane-security/authentication.yaml
# Copyright 2020 IBM Corp.
# SPDX-License-Identifier: Apache-2.0

apiVersion: "security.istio.io/v1beta1"
# This policy enables mutual TLS traffic between every two workloads that have sidecar.
kind: "PeerAuthentication"
metadata:
  name: "premissive-mtls-in-control-plane"
spec:
  mtls:
    # PERMISSIVE: Workloads accept both mutual TLS and plain text traffic
    mode: PERMISSIVE
